tests/cmp/record-pat-single-dot.nocolor.golden
tests/cmp/record-pat-single-dot.trp:3:13: parse error
  3 |     val {a, .} = r
    |             ^
  unexpected '.'
  expected identifier

